# untaped-recipe

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: apply.md  (+12 more)
docs/superpowers/exercises/2026-07-07-real-pack/packs/collections-ensure/: pyproject.toml
docs/superpowers/exercises/2026-07-07-real-pack/packs/collections-ensure/recipes/ensure-collections/: recipe.yml
docs/superpowers/exercises/2026-07-07-real-pack/packs/collections-ensure/src/collections_ensure_pack/hooks/: ensure_collections.py  has_playbooks.py
docs/superpowers/exercises/2026-07-07-real-pack/packs/collections-ensure/tests/: test_hook_ensure_collections.py  test_hook_has_playbooks.py
docs/superpowers/exercises/2026-07-07-real-pack/packs/collections-ensure/tests/ensure-collections/basic/: case.yml
docs/superpowers/exercises/2026-07-07-real-pack/packs/collections-ensure/tests/ensure-collections/basic/expected/: requirements.yml
docs/superpowers/exercises/2026-07-07-real-pack/packs/collections-ensure/tests/ensure-collections/basic/given/: site.yml
docs/superpowers/exercises/2026-07-07-real-pack/packs/fleet-hygiene/: pyproject.toml
docs/superpowers/exercises/2026-07-07-real-pack/packs/fleet-hygiene/recipes/seed-hygiene/: recipe.yml
docs/superpowers/exercises/2026-07-07-real-pack/packs/fleet-hygiene/recipes/seed-hygiene/files/: lint.yml
docs/superpowers/exercises/2026-07-07-real-pack/packs/fleet-hygiene/recipes/seed-hygiene/templates/: yamllint.yml
docs/superpowers/exercises/2026-07-07-real-pack/packs/fleet-hygiene/tests/seed-hygiene/basic/: case.yml
(+144 files in other folders)
